test/testdata/list/times_negative_int_error.lox
print ["hello"] * -1; // error: cannot multiply 'list' by negative 'number'
